Fix horizontal overflow

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,27 +16,24 @@ $layout-breakpoint-medium: 900px
 @import libs/reset.sass
 
 .header
+	display: grid
+	justify-content: center
 	.header__logo
-			color: $primary-color
-			position: relative
+			color: $primary-color 
+			position: relative 
 			font-size: 3em
 			font-family: "Cyberpunk"
-			text-align: center
 			margin: .25em 0 .5em
 	.header__logo::before,
 	.header__logo::after 
 		content: "nismo dev"
 		position: absolute
-		top: 0px
-		left: 0px
-		width: 100%
-		height: 100%
 	.header__logo::before 
-		left: 12px
+		right: -13px
 		background: black
 		animation: glitch 1.3s infinite linear alternate-reverse
 	.header__logo::after 
-		left: -8px
+		left: -8px 
 		background: black
 		animation: glitch 2.2s infinite linear alternate
 
@@ -59,7 +56,7 @@ $layout-breakpoint-medium: 900px
 		font-family: "Orbitron"
 		text-align: center
 		line-height: 1.5em
-		color: $ternary-color   
+		color: $ternary-color
 		&--blue
 			@extend .header__description
 			color: $secondary-color
